--- a/Webpage/index.html
+++ b/Webpage/index.html
@@ -11,6 +11,9 @@
     <h1> Earl's 2024 Summer Holiday </h1>
     <p> During the Holidays, I went camping with a large group of people and we 
     had lots of fun. We played lots of games, went watersliding and even crawling through mud!
+    
+
+    chicken sandwich
     </p>
     <img src="Thousand Year Stare.jpg" alt="Thousand-Year-Stare">
 </center>
