--- a/Webpage/index.html
+++ b/Webpage/index.html
@@ -7,6 +7,7 @@
     <link rel=stylesheet href="style.css">
 </head>
 <body>
+    <!--do this in CSS. Using center tags is bad practise-->
     <center>
     <h1> Earl's 2024 Summer Holiday </h1>
     <p> During the Holidays, I went camping with a large group of people and we 
